# rust_macro_sample

./: Cargo.toml
macro_attribute/: Cargo.toml
macro_attribute/src/: lib.rs
macro_declarative/: Cargo.toml
macro_declarative/src/: lib.rs
macro_derive/: Cargo.toml
macro_derive/src/: lib.rs
macro_trait/: Cargo.toml
macro_trait/src/: lib.rs
src/: main.rs
tests/: macro_declarative_test.rs
