[package]
name = "rust_macro_sample"
version = "0.0.1"
edition = "2021"

[dependencies]
macro_derive = { path = "./macro_derive" }
macro_trait = { path = "./macro_trait" }
macro_attribute = { path = "./macro_attribute" }
macro_declarative = { path = "./macro_declarative" }

[workspace]
members = ["macro_derive", "macro_trait", "macro_attribute", "macro_declarative"] 